# tldr-hs

./: LICENSE  tldr-hs.cabal
.stack-work/install/x86_64-osx/lts-3.20/7.10.2/flag-cache/: aeson-0.8.0.2-7430d1c0fafd329dd3d734493df08231  attoparsec-0.12.1.6-9ef8853f1eff8db8559e764c38e60195  dlist-0.7.1.2-31419d498459d3448eddd9aba0883e21  hashable-1.2.3.3-c6563ad35ec65a613547780c4815f4c1  mtl-2.2.1-5cf332b11edb88a6040af20fd6a58acb  primitive-0.6.1.0-842c44bae4dcc3c70cd2af42599ab93d  scientific-0.3.4.4-73e0bdcf40ba6584d62b120b3007d709  syb-0.5.1-09089498a055bd723b4a95c1351d3c8a  text-1.2.2.0-facbbedef99fbcc6734645913f447a62  tldr-hs-0.1.0.0-6e394d397120a4bdf11d2ebdb3a872ae  unordered-containers-0.2.5.1-b7b95492a4cb10ed9afa214c45e23035  vector-0.10.12.3-67219b7cb09d19688dca52e92595a7d6
.stack-work/install/x86_64-osx/lts-3.20/7.10.2/lib/x86_64-osx-ghc-7.10.2/tldr-hs-0.1.0.0-BODciEs7T9jCakFxOjB2aq/: libHStldr-hs-0.1.0.0-BODciEs7T9jCakFxOjB2aq-ghc7.10.2.dylib
.stack-work/install/x86_64-osx/lts-3.20/7.10.2/pkgdb/: package.cache  tldr-hs-0.1.0.0-6e394d397120a4bdf11d2ebdb3a872ae.conf
app/: Main.hs
