name:                tldr-hs
version:             0.1.0.0
synopsis:            Sample tldr-pages client in haskell
description:         Please see README.md
homepage:            http://github.com/ostera/tldr-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Leandro Ostera
maintainer:          leandro@ostera.io
copyright:           2015 Leandro Ostera <leandro@ostera.io>
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable tldr-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tldr-hs
                     , aeson
  default-language:    Haskell2010

test-suite tldr-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tldr-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ostera/tldr-hs
